# OpenAI-buildweek

./: .dockerignore  .env.production.example  .gitignore  APP_RELEASE_HARDENING_PLAN.md  DATA_SCIENCE_D0_D3_PLAN.md  DEPLOYMENT_GUIDE.md  README.md  deep-research-report.md  docker-compose.production.yml
backend/: .env.example  alembic.ini  compose.yaml  pyproject.toml
backend/api/: Dockerfile  README.md
backend/api/app/: __init__.py  main.py
backend/api/app/ai/: __init__.py  prompts.py  provider.py  schemas.py  validators.py  vertex.py
backend/api/app/api/: router.py
backend/api/app/api/routes/: analytics.py  artifacts.py  attempts.py  auth.py  blueprints.py  classes.py  (+6 more)
backend/api/app/core/: config.py  dependencies.py  logging.py  middleware.py  security.py
backend/api/app/db/: __init__.py  base.py  dependencies.py  session.py
backend/api/app/integrations/: storage.py  vertex_ai.py
backend/api/app/modules/: __init__.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 20260714_0001_initial_foundation.py  20260714_0002_subject_exams_classes.py  20260716_0003_exam_configuration.py  20260716_0004_mocks_attempts.py  20260716_0005_artifact_ingestion.py  20260719_0006_ai_retrieval.py  20260720_0007_blueprints_evaluations.py  20260720_0008_library_classes.py  20260721_0009_ds_foundation.py  20260721_0010_class_entitlements.py
backend/api/tests/: conftest.py  test_ai_contracts.py  test_analytics_benchmark.py  test_analytics_model.py  test_artifacts.py  test_auth_workspaces_integration.py  test_exam_drafts.py  test_health.py  test_m6_library_classes.py  test_metadata.py  test_openapi.py  test_security.py
backend/api/tests/fixtures/: analytics_benchmark.v1.json
backend/worker/: __init__.py
(+161 files in other folders)
