[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-buildweek-backend"
version = "0.1.0"
description = "Backend for the adaptive exam-prep Build Week project"
readme = "api/README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "boto3>=1.39,<2",
    "dramatiq[redis]>=1.18,<2",
    "email-validator>=2.2,<3",
    "fastapi>=0.128,<0.129",
    "pwdlib[argon2]>=0.3,<1",
    "pydantic-settings>=2.7,<3",
    "pymupdf>=1.26,<2",
    "pyjwt>=2.10,<3",
    "python-docx>=1.2,<2",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["api"]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["api/tests"]
asyncio_mode = "auto"
markers = ["integration: tests that require PostgreSQL"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["api", "worker"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["api/app", "api/tests"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "docx", "docx.*", "dramatiq", "dramatiq.*"]
ignore_missing_imports = true
disallow_untyped_calls = false
